fix list text overflow appearance

--- a/src/components/note-list/note-list.scss
+++ b/src/components/note-list/note-list.scss
@@ -8,8 +8,6 @@
       cursor: pointer;
 
       .listItemText {
-        overflow: hidden;
-        text-overflow: ellipsis;
         white-space: nowrap;
       }
     }
